// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField when layout is horizontal renders FormField with appropriate for horizontal layout styles and classNames 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="text-[1rem] [&+&]:mt-4 grid w-full gap-x gap-y grid-rows grid-cols-[calc(4.25rem*var(--form-label [grid-template xs:[--form-label-width:var(--form-label-width- sm:[--form-label-width:var(--form-label-width- md:[--form-label-width:var(--form-label-width- lg:[--form-label-width:var(--form-label-width- xl:[--form-label-width:var(--form-label-width-"
      data-field-has-error="false"
      style="--form-label-width: 3;"
    >
      <input />
    </div>
  </div>
</div>
`;

exports[`FormField when layout is horizontal when labelWidth is 4 renders FormField with appropriate for horizontal layout styles and classNames 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="text-[1rem] [&+&]:mt-4 grid w-full gap-x gap-y grid-rows grid-cols-[calc(4.25rem*var(--form-label [grid-template xs:[--form-label-width:var(--form-label-width- sm:[--form-label-width:var(--form-label-width- md:[--form-label-width:var(--form-label-width- lg:[--form-label-width:var(--form-label-width- xl:[--form-label-width:var(--form-label-width-"
      data-field-has-error="false"
      style="--form-label-width: 4;"
    >
      <input />
    </div>
  </div>
</div>
`;

exports[`FormField when layout is vertical renders FormField with appropriate for vertical layout styles and classNames 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="text-[1rem] [&+&]:mt-4"
      data-field-has-error="false"
    >
      <input />
    </div>
  </div>
</div>
`;
